--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>First HTML</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1> TESTE </h1>
+    <header>
+        <nav id="header-menu">
+            <ul id="navbar-header" class="navbar-ul">
+                <li class="header-item"><img id="logo" src="img/3C_Plus.png"></li>
+                <li class="header-item">Instituto 3C+</li>
+            </ul>
+            <ul id="navbar-main" class="navbar-ul">
+                <li class="header-item">teste</li>
+                <li class="header-item">teste</li>
+                <li class="header-item">teste</li>
+                <li class="header-item">teste</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
