--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First HTML</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -13,6 +14,8 @@
                 <li class="header-item"><img id="logo" src="img/3C_Plus.png"></li>
                 <li class="header-item">Instituto 3C+</li>
             </ul>
+            <ul class="navbar-ul">
+                <li class="header-item"><a href=""><i class="fa-solid fa-house"></i></a></li>
             <ul id="navbar-main" class="navbar-ul">
                 <li class="header-item">teste</li>
                 <li class="header-item">teste</li>
@@ -22,10 +25,12 @@
         </nav>
     </header>
     <main>
-
+        <video width="320" height="240" controls>
+            <source src="" type>
+        </video>
     </main>
     <footer>
-
+        
     </footer>
 </body>
 </html>
